objects/SW_Only_Asset__c.object
<CustomObject>
    <description>These are for regions where we ship HW and SW separately. This will capture the record of the SW shipment and trigger an email to the linked Contact as fulfillment</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SW_Only_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivered_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>this is the contact the fulfillment email will be sent to</inlineHelpText>
        <label>Delivered To:</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SW_Only_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product shipped</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>SW_Only_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Reference__c</fullName>
        <label>SO Reference</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <label>SW Fulfillment History</label>
    <nameField>
        <displayFormat>SWOA-{000}</displayFormat>
        <label>SW Only Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SW Fulfillments History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>